# collate-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/definitions/: collation_element_tables.rs  collation_wel.rs  ignorable.rs  mappings.rs  mod.rs
