[package]
name = "collate-rs"
version = "0.0.1"
edition = "2021"
description = "Rust Implementation of Unicode Collation Algorithm"
readme = "./README.md"
license-file = "./LICENSE"
repository = "https://github.com/caiogeraldes/collate-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

[features]
default = ["implemented"]
todo = []
implemented = []
